--- a/buyer-file/assets/scss/_variables.scss
+++ b/buyer-file/assets/scss/_variables.scss
@@ -4,7 +4,7 @@
     --body: #fff;
     --black: #000;
     --white: #fff;
-    --theme: #59D2F3;
+    --theme: #2563eb;
     --theme2: #5AE70E;
     --theme3: #A80EE6;
     --header: #17012C;
